--- a/ps/properties/isim.properties
+++ b/ps/properties/isim.properties
@@ -1,6 +1,6 @@
 #v2.0.1ac
-#ISIM_PRINCIPAL=itim manager
-#ISIM_SECRET=Ninguno123!
+#ISIM_PRINCIPAL=
+#ISIM_SECRET=
 ISIM_VA=172.25.230.153
 ISIM_APP=172.25.230.154
 ORGANIZATION_NAME=Acme Inc.
